# src/models/rent.go
@@ -12,16 +12,16 @@ import (
 type Rent struct {
 	model
 	Id          int64      `orm:"column(id);pk"`
-	AccountId   *Account   `orm:"column(user_id);rel(fk)"`
-	TypeId      *RentTypes `orm:"column(type_id);rel(fk)"`
-	TransportId *Transport `orm:"column(transport_id);rel(fk)"`
+	AccountId   *Account   `orm:"rel(one)"`
+	Type        string     `orm:""`
+	TransportId *Transport `orm:"column(transport_id);rel(one)"`
 	TimeStart   time.Time  `orm:"column(time_start);type(timestamp without time zone);null;auto_now_add"`
 	TimeEnd     time.Time  `orm:"column(time_end);type(timestamp without time zone);null"`
 	PriceOfUnit float64    `orm:"column(price_of_unit)"`
 	FinalPrice  float64    `orm:"column(final_price);null"`
 	Status      int        `orm:"column(status)"`
 	CreatedAt   time.Time  `orm:"column(created_at);type(timestamp without time zone);auto_now_add"`
-	UpdatedAt   time.Time  `orm:"column(updated_at);type(timestamp without time zone);auto_now_add"`
+	UpdatedAt   time.Time  `orm:"column(updated_at);type(timestamp without time zone);auto_now"`
 }
 
 func (t *Rent) TableName() string {
