# src/models/transport.go
@@ -8,20 +8,20 @@ import (
 
 type Transport struct {
 	model
-	Id          int64     `orm:"column(id);pk"`
-	AccountId   *Account  `orm:"column(user_id);rel(fk)"`
-	CanBeRented bool      `orm:"column(can_be_rented)"`
-	Type        string    `orm:"column(type_id);rel(fk)"`
-	Model       string    `orm:"column(model)"`
-	Color       string    `orm:"column(color)"`
-	Identifier  string    `orm:"column(identifier)"`
-	Description string    `orm:"column(description);null"`
-	Latitude    float64   `orm:"column(latitude)"`
-	Longitude   float64   `orm:"column(longitude)"`
-	MinutePrice float64   `orm:"column(minute_price);null"`
-	DayPrice    float64   `orm:"column(day_price);null"`
-	CreatedAt   time.Time `orm:"column(created_at);type(timestamp without time zone);auto_now_add"`
-	UpdatedAt   time.Time `orm:"column(updated_at);type(timestamp without time zone);auto_now_add"`
+	Id          int64     `orm:"auto;pk"`
+	Account     *Account  `orm:"column(account_id);rel(one)"`
+	CanBeRented bool      `orm:"" default:"false"`
+	Type        string    `orm:""`
+	Model       string    `orm:""`
+	Color       string    `orm:""`
+	Identifier  string    `orm:""`
+	Description string    `orm:"null"`
+	Latitude    float64   `orm:""`
+	Longitude   float64   `orm:""`
+	MinutePrice float64   `orm:"null"`
+	DayPrice    float64   `orm:"null"`
+	CreatedAt   time.Time `orm:"type(timestamp without time zone);auto_now_add"`
+	UpdatedAt   time.Time `orm:"type(timestamp without time zone);auto_now"`
 }
 
 func (t *Transport) TableName() string {
@@ -30,4 +30,19 @@ func (t *Transport) TableName() string {
 
 func init() {
 	orm.RegisterModel(new(Transport))
+}
+
+func Search(params map[string]string, offset int, limit int) (ml []*Transport, err error) {
+	o := orm.NewOrm()
+	qs := o.QueryTable(new(Transport))
+
+	for k, v := range params {
+		qs = qs.Filter(k, v)
+	}
+
+	var list []*Transport
+	if _, err = qs.Limit(limit, (offset-1)*limit).All(&list); err == nil {
+		return list, nil
+	}
+	return nil, err
 }
