# swagger/swagger.json
@@ -157,7 +157,7 @@
                     {
                         "in": "query",
                         "name": "start",
-                        "description": "Начало выборки [применяет offset(start*count)]",
+                        "description": "Начало выборки [применяет offset((start - 1) * count)]",
                         "type": "integer",
                         "format": "int64",
                         "default": "1"
@@ -236,7 +236,7 @@
                     {
                         "in": "path",
                         "name": "id",
-                        "description": "id",
+                        "description": "accountId",
                         "required": true,
                         "type": "integer",
                         "format": "int64"
@@ -283,7 +283,7 @@
                     {
                         "in": "body",
                         "name": "body",
-                        "description": "info",
+                        "description": "account info",
                         "schema": {
                             "$ref": "#/definitions/requests.AdminAccountWriteRequest"
                         }
@@ -609,41 +609,34 @@
                 "operationId": "AdminTransportController.GetAll",
                 "parameters": [
                     {
-                        "in": "path",
-                        "name": "id",
-                        "description": "id",
-                        "required": true,
-                        "type": "integer",
-                        "format": "int64"
-                    },
-                    {
                         "in": "query",
                         "name": "start",
-                        "description": "выборки",
+                        "description": "Начало выборки [применяет offset((start - 1) * count)]",
                         "type": "integer",
                         "format": "int64",
-                        "default": "false"
+                        "default": "1"
                     },
                     {
                         "in": "query",
                         "name": "count",
-                        "description": "выборки",
+                        "description": "Размер выборки (по умолчанию 10)",
                         "type": "integer",
                         "format": "int64",
-                        "default": "false"
+                        "default": "10"
                     },
                     {
                         "in": "query",
                         "name": "transportType",
-                        "description": "false",
-                        "type": "string"
+                        "description": "Тип транспорта [Car, Bike, Scooter, All]",
+                        "type": "string",
+                        "default": "All"
                     }
                 ],
                 "responses": {
                     "200": {
-                        "description": "Указанный объект может быть получен по ключу data",
+                        "description": "Список из указанных объектов может быть получен по ключу data",
                         "schema": {
-                            "$ref": "#/definitions/responses.AdminTransportResponseCollection"
+                            "$ref": "#/definitions/responses.TransportResponse"
                         }
                     },
                     "401": {
@@ -704,7 +697,7 @@
                     {
                         "in": "path",
                         "name": "id",
-                        "description": "id",
+                        "description": "transportId",
                         "required": true,
                         "type": "integer",
                         "format": "int64"
@@ -712,9 +705,9 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "Указанный объект может быть получен по ключу data",
+                        "description": "\"Указанный объект может быть получен по ключу data\"",
                         "schema": {
-                            "$ref": "#/definitions/models.Transport"
+                            "$ref": "#/definitions/responses.TransportResponse"
                         }
                     },
                     "400": {
@@ -758,7 +751,7 @@
                     "200": {
                         "description": "Указанный объект может быть получен по ключу data",
                         "schema": {
-                            "$ref": "#/definitions/models.Transport"
+                            "$ref": "#/definitions/responses.TransportResponse"
                         }
                     },
                     "400": {
@@ -1403,29 +1396,12 @@
                 "Model": {
                     "type": "string"
                 },
-                "TypeId": {
-                    "$ref": "#/definitions/models.TransportTypes"
+                "Type": {
+                    "type": "string"
                 },
                 "UpdatedAt": {
                     "type": "string",
                     "format": "datetime"
-                }
-            }
-        },
-        "models.TransportTypes": {
-            "title": "TransportTypes",
-            "type": "object",
-            "properties": {
-                "Id": {
-                    "type": "integer",
-                    "format": "int64"
-                },
-                "Status": {
-                    "type": "integer",
-                    "format": "int64"
-                },
-                "Title": {
-                    "type": "string"
                 }
             }
         },
@@ -1706,18 +1682,6 @@
                 }
             }
         },
-        "responses.AdminTransportResponseCollection": {
-            "title": "AdminTransportResponseCollection",
-            "type": "object",
-            "properties": {
-                "List": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/models.Transport"
-                    }
-                }
-            }
-        },
         "responses.RentGetResponse": {
             "title": "RentGetResponse",
             "type": "object",
@@ -1820,10 +1784,6 @@
             "title": "TransportResponse",
             "type": "object",
             "properties": {
-                "AccountId": {
-                    "type": "integer",
-                    "format": "int64"
-                },
                 "CanBeRented": {
                     "type": "boolean"
                 },
@@ -1859,7 +1819,11 @@
                 "Model": {
                     "type": "string"
                 },
-                "Type": {
+                "OwnerId": {
+                    "type": "integer",
+                    "format": "int64"
+                },
+                "TransportType": {
                     "type": "string"
                 }
             }
